--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,23 @@
 # Dependencies
 node_modules/
-npm-debug.log
-yarn-debug.log
-yarn-error.log
-
-# Environment variables
 .env
-.env.local
-.env.*.local
 
 # Build files
 dist/
 build/
 
 # IDE files
-.idea/
 .vscode/
-*.swp
-*.swo
+.idea/
 
 # OS files
 .DS_Store
-Thumbs.db 
+Thumbs.db
+
+# Audio files
+*.wav
+*.mp3
+*.ogg
+
+# Logs
+*.log 
